tests/fixtures/invalid/syntax_error.py
"""Script with syntax error."""
import pyatb

def broken(
    hr_file = "HR.dat"
    # missing closing paren
tb = pyatb.TB()
